[package]
name = "rust-image-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7.9", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
image = { version = "0.25.6", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "webp",
    "bmp",
] }
reqwest = { version = "0.12.15", features = ["rustls-tls", "json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
bytes = "1.10.1"
mime_guess = "2.0.5"
